scripts/kubernetes/recommended.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  labels:
    segma-app: docker-captain
  name: docker-captain
spec:
  rules:
    - host: docker-captain.dev.segma.tech
      http:
        paths:
          - path: /
            backend:
              serviceName: docker-captain
              servicePort: 8080
---
kind: Service
apiVersion: v1
metadata:
  labels:
    segma-app: docker-captain
  name: docker-captain
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    segma-app: docker-captain
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    segma-app: docker-captain
  name: docker-captain
spec:
  replicas: 1
  selector:
    matchLabels:
      segma-app: docker-captain
  template:
    metadata:
      labels:
        segma-app: docker-captain
    spec:
      containers:
        - name: segma-app
          image: hub.d.cisdigital.cn/segma-easy-sense/docker-captain:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 30
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: docker-sock
            - mountPath: /tmp
              name: tmp-dir
      volumes:
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
        - name: tmp-dir
          hostPath:
            path: /tmp
      nodeSelector:
        "kubernetes.io/os": linux
---
